🔍 Finally fixing momentum scrolling on ios ?

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -27,6 +27,7 @@ a {
 	font-family: 'Open Sans', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	-webkit-overflow-scrolling: touch;
 	color: white;
 	position: relative;
 	height: 100vh;
@@ -40,6 +41,7 @@ a {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
+	transform: translateZ(0);
 }
 .img {
 	background-size: cover;
